<resources>
    <string name="pref_sound_key" translatable="false">switch_sound</string>
    <string name="pref_handicap_key" translatable="false">list_handicap</string>
    <string name="pref_level_key" translatable="false">list_computer_power</string>
    <string name="pref_who_first_key" translatable="false">switch_computer_first</string>
    <string name="pref_piece_style_key" translatable="false">list_chess_style</string>
    <string name="github_user_page" translatable="false">https://huzongyao.github.io</string>
    <string name="github_project_page" translatable="false">https://github.com/huzongyao/JChineseChess</string>
    <string name="github_release_page" translatable="false">https://github.com/huzongyao/JChineseChess/releases</string>

    <string name="app_name">ChineseChess</string>
    <string name="now_loading">Loading, Please Wait…</string>
    <string name="load_book_failed">Load Book Failed!</string>
    <string name="congratulations_you_win">Congratulations, You Win！</string>
    <string name="you_lose_and_try_again">You Lost, Please Try Again！</string>
    <string name="play_too_long_as_lose">You Fight Too Long And You Lose！</string>
    <string name="pc_play_too_long_as_lose">AI Fight Too Long And You Win！</string>
    <string name="standoff_as_draw">Standoff And Nobody Could Win, So Game Is Draw！</string>
    <string name="both_too_long_as_draw">Too Many Steps And Game Is Draw！</string>
    <string name="pref_sound_summary">If The You Want To Enable The Sound</string>
    <string name="pref_sound_title">Sound</string>
    <string name="pref_handicap_title">Handicap</string>
    <string name="pref_handicap_summary">Who Go First Lose Some Pieces:%s</string>
    <string name="pref_level_title">AI Level</string>
    <string name="pref_level_summary">Computer AI Level Is:%s</string>
    <string name="pref_who_first_summary">Let The Computer Start The Game</string>
    <string name="pref_who_first_title">Computer Go First</string>
    <string name="pref_piece_title">Chessman UI Style</string>
    <string name="pref_piece_style_summary">Chessman UI Style In Board:%s</string>
    <string name="game_settings">Game Settings</string>
    <string name="new_game_started">A New Game Is Started！</string>
    <string name="load_last_game_finish">Saved Game Is Reloaded！</string>
    <string name="no_more_histories">No More Histories To Roll Back！</string>
    <string name="menu_retract">Retract</string>
    <string name="menu_restart">Restart</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_about">About</string>
    <string name="version_info">Version Info</string>
    <string name="source_code">Source Code:</string>
    <string name="j_chinese_chess">JChineseChess</string>
    <string name="my_github">My GitHub</string>
    <string name="web_view_refresh">Refresh</string>
</resources>
